--- a/tags_asc_dsc_libs/build.gradle
+++ b/tags_asc_dsc_libs/build.gradle
@@ -22,3 +22,17 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
 }
+
+// This is the actual solution, as in http://stackoverflow.com/a/19037807/1002054
+task clearJar(type: Delete) {
+    delete 'build/libs/tags_asc_dsc_jars.jar'
+}
+
+task makeJar(type: Copy) {
+    from('build/intermediates/bundles/release/')
+    into('build/libs/')
+    include('classes.jar')
+    rename ('classes.jar', 'tags_asc_dsc_jars.jar')
+}
+
+makeJar.dependsOn(clearJar, build)
